i made a boo boo on the global nav closing tag

--- a/index.htm
+++ b/index.htm
@@ -22,12 +22,12 @@
 					<!-- i can has spritesheet -->
 					<nav id="global">
 						<ul>
-							<a href="#"><li>School</a></li>
-							<a href="#"><li>Programs</a></li>
-							<a href="#"><li class="long">Community</a></li>
-							<a href="#"><li class="long">Exhibition</a></li>
-							<a href="#"><li>Apply</a></li>
-							<a href="#"><li>Support</a></li>
+							<a href="#"><li>School</li></a>
+							<a href="#"><li>Programs</li></a>
+							<a href="#"><li class="long">Community</li></a>
+							<a href="#"><li class="long">Exhibition</li></a>
+							<a href="#"><li>Apply</li></a>
+							<a href="#"><li>Support</li></a>
 						</ul>
 					</nav>
 				</div>
@@ -49,8 +49,8 @@
 					<div class="grid_3 suffix_1">
 						<nav id="sub">
 							<ul>
-								<a href="#"><li>What is design?</a></li>
-								<a href="#"><li>Our mission</a></li>
+								<a href="#"><li>What is design?</li></a>
+								<a href="#"><li>Our mission</li></a>
 							</ul>
 						</nav>
 					</div>
