--- a/profile.intranet.htm
+++ b/profile.intranet.htm
@@ -36,7 +36,7 @@
 					<img src="img/content/davidyen.jpg"><div id="username">David Yen</div>
 					<h4>Industrial design undergraduate</h4>
 					<h2 class="intranet">Edit public profile</h2>
-					View online at <a href="/students/davidyen">design.cmu.edu/students/davidyen</a><br>
+					View online at <a href="/students/davidyen" class="intranet">design.cmu.edu/students/davidyen</a><br>
 					<form>
 					<label for="bio">Biography</label>
 					<textarea name="bio" id="bio">Hi, my name is David Yen. I'm a designer currently studying at Carnegie Mellon University. I love technology and enjoy making simple products that provide real value to people. I also like fish tacos, biking, and making things with my amazing girlfriend. I'll be graduating in May and moving to San Francisco to work at Google!</textarea><br class="clear"><br>
@@ -49,7 +49,7 @@
 					<label for="links">&nbsp;</label>
 					<input type="text" name="links" id="links"value="tackup.org/davidyen"></input>
 					<label for="links">&nbsp;</label>
-					<a href="#" id="add">Add another link</a>
+					<a href="#" id="add" class="intranet">Add another link</a>
 					</form>
 				</div>
 				
