--- a/index.htm
+++ b/index.htm
@@ -16,9 +16,11 @@
 					<div class="container_12">
 						<div class="grid_2 suffix_2">
 							<!-- logo is still slightly too big-->
-							<h1 id="logo">Carnegie Mellon Design</h1>
+							<a href="index.htm">
+								<h1 id="logo">Carnegie Mellon Design</h1>
+							</a>
 						</div>
-						
+												
 						<div class="grid_8">
 							<!-- i can has spritesheet -->
 							<nav id="global">
@@ -26,7 +28,7 @@
 									<a href="#"><li>School</li></a>
 									<a href="#"><li>Programs</li></a>
 									<a href="#"><li>Community</li></a>
-									<a href="#"><li>Exhibition</li></a>
+									<a href="exhibition.index.htm"><li>Exhibition</li></a>
 									<a href="#"><li>Apply</li></a>
 									<a href="#"><li>Support</li></a>
 								</ul>
