--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
 								</h2>
 							</div>
 							
-							<div class="grid_3 suffix_1">
+							<div class="grid_3 class suffix_1">
 								<nav id="sub">
 									<ul>
 										<a href="#"><li>What is design?</li></a>
