--- a/intranet/profile.htm
+++ b/intranet/profile.htm
@@ -16,7 +16,7 @@
 				<div class="container_12">
 					<div class="grid_2 suffix_2">
 						<!-- logo is still slightly too big-->
-						<h1 id="logo">Carnegie Mellon Design</h1>
+						<h1 class="intranet" id="logo">Carnegie Mellon Design</h1>
 					</div>
 					
 					<div class="grid_8">
