A class page has been added. Fixed some other small stuff I'm sure, since there are modified files elsewhere. So that other stuff is fixed.

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 	</head>
 	
 	<body>
-			<div id="contentwrapper">
+			<div id="wrapper">
 				<header>
 					<div class="container_12">
 						<div class="grid_2 suffix_2">
