--- a/intranet/profile.htm
+++ b/intranet/profile.htm
@@ -2,16 +2,16 @@
 <html>
 	<head>
 		<title>Pit Prototype</title>
-		<link href="assets/css/reset.css" rel="stylesheet" type="text/css">
-		<link href="assets/css/960.css" rel="stylesheet" type="text/css">
-		<link href="assets/css/style.css" rel="stylesheet" type="text/css">
+		<link href="../assets/css/reset.css" rel="stylesheet" type="text/css">
+		<link href="../assets/css/960.css" rel="stylesheet" type="text/css">
+		<link href="../assets/css/style.css" rel="stylesheet" type="text/css">
 		
 		<script type="text/javascript" src="http://use.typekit.com/luo3wan.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	</head>
 	
 	<body>
-		<div id="contentwrapper">
+		<div id="wrapper">
 			<header id="intranet">
 				<div class="container_12">
 					<div class="grid_2 suffix_2">
@@ -24,7 +24,7 @@
 						<nav id="global">
 							<ul>
 								<a href="#"><li>My Classes</li></a>
-								<a href="#"><li><img src="assets/img/content/davidyen.jpg" width="24px">David Yen</li></a>
+								<a href="#"><li><img src="../assets/img/content/davidyen.jpg" width="24px">David Yen</li></a>
 							</ul>
 						</nav>
 					</div>
