minor about changes

--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
 							<!-- i can has spritesheet -->
 							<nav id="global">
 								<ul>
-									<a href="#"><li>School</li></a>
+									<a href="about.index.htm"><li>School</li></a>
 									<a href="#"><li>Programs</li></a>
 									<a href="#"><li>Community</li></a>
 									<a href="exhibition.index.htm"><li>Exhibition</li></a>
