--- a/school/index.htm
+++ b/school/index.htm
@@ -24,7 +24,7 @@
 					<div class="container_12">
 						<div class="grid_2 suffix_2">
 							<!-- logo is still slightly too big-->
-							<a href="index.htm">
+							<a href="../index.htm">
 								<h1 id="logo">Carnegie Mellon Design</h1>
 							</a>
 						</div>
@@ -33,12 +33,12 @@
 							<!-- i can has spritesheet -->
 							<nav id="global">
 								<ul>
-									<a href="school"><li>School</li></a>
-									<a href="programs"><li>Programs</li></a>
-									<a href="community"><li>Community</li></a>
-									<a href="exhibition"><li>Exhibition</li></a>
-									<a href="apply"><li>Apply</li></a>
-									<a href="support"><li>Support</li></a>
+									<a href="../school"><li>School</li></a>
+									<a href="../programs"><li>Programs</li></a>
+									<a href="../community"><li>Community</li></a>
+									<a href="../exhibition"><li>Exhibition</li></a>
+									<a href="../apply"><li>Apply</li></a>
+									<a href="../support"><li>Support</li></a>
 								</ul>
 							</nav>
 						</div>
