--- a/exhibition/index.htm
+++ b/exhibition/index.htm
@@ -81,7 +81,7 @@
 				<div id="exhibition">
 					<div class="container_12">
 						<div id="hero" class="grid_12">
-							<img src="../assets/img/content/piecesshow.jpg">
+							<img class="img_border" src="../assets/img/content/piecesshow.jpg">
 						</div>
 					</div>
 															
