headline size change

--- a/school/index.htm
+++ b/school/index.htm
@@ -51,12 +51,12 @@
 					</div>
 					
 					<div class="grid_12" id="section_header">
-						<h2>About the School of Design</h2>	
+						<h4>About the School / What is Design</h4>
 					</div>
 					<div id="side_nav" class="grid_3">
 						<ul>
-							<a href="#"><li>About the School</li></a>
 							<a href="#"><li>What is Design?</li></a>
+							<a href="#"><li>About the School</li></a>
 							<a href="#"><li>Institute</li></a>
 							<a href="#"><li>Features</li></a>
 							<a href="#"><li>Calendar</li></a>
@@ -64,7 +64,9 @@
 							<a href="#"><li>Contact</li></a>
 						</ul>
 					</div>
-					<div class="grid_6"></div>
+					<div class="grid_6">
+						<h2>What is Design?</h2>
+					</div>
 					<div class="grid_3"></div>
 				</div>
 				<div id="push"></div>
