details and css

--- a/school/index.htm
+++ b/school/index.htm
@@ -47,7 +47,7 @@
 				
 				<div class="container_12">
 					<div id="hero" class="grid_12">
-						<img class="img_border" src="../assets/img/content/id_shop.jpg" alt="Industrial Design shop.">
+						<img class="sidekick img_border" src="../assets/img/content/id_shop.jpg" alt="Industrial Design shop.">
 					</div>
 					
 					<div class="grid_12" id="section_header">
