--- a/school/index.htm
+++ b/school/index.htm
@@ -46,9 +46,9 @@
 				</header>
 				
 				<div class="container_12">
-					<div id="hero" class="grid_12">
-						<img class="sidekick img_border" src="../assets/img/content/id_shop.jpg" alt="Industrial Design shop.">
-					</div>
+					<figure class="grid_12" id="sidekick" >
+						<img src="../assets/img/content/id_shop.jpg" alt="Industrial Design shop.">
+					</figure>
 					
 					<div class="grid_12" id="section_header">
 						<span class="breadcrumb">School / What is Design</span>
