some apply stuff

--- a/index.htm
+++ b/index.htm
@@ -43,12 +43,24 @@
 							<!-- i can has spritesheet -->
 							<nav id="global">
 								<ul>
-									<a href="school"><li>School</li></a>
-									<a href="programs"><li>Programs</li></a>
-									<a href="community"><li>Community</li></a>
-									<a href="exhibition"><li>Exhibition</li></a>
-									<a href="apply"><li>Apply</li></a>
-									<a href="support"><li>Support</li></a>
+									<a href="school"><li>
+									School
+									</li></a>
+									<a href="programs"><li>
+									Programs
+									</li></a>
+									<a href="community"><li>
+									Community
+									</li></a>
+									<a href="exhibition"><li>
+									Exhibition
+									</li></a>
+									<a href="apply"><li>
+									Apply
+									</li></a>
+									<a href="support"><li>
+									Support
+									</li></a>
 								</ul>
 							</nav>
 						</div>
