--- a/school/index.htm
+++ b/school/index.htm
@@ -58,7 +58,7 @@
 						<ul>
 							<a href="#"><li class="selected">What is Design?</li></a>
 							<a href="#"><li>About the School</li></a>
-							<a href="#"><li>Institute</li></a>
+							<a href="#"><li>The Design Institute</li></a>
 							<a href="#"><li>Features</li></a>
 							<a href="#"><li>Calendar</li></a>
 							<a href="#"><li>Environment</li></a>
@@ -69,11 +69,14 @@
 						<h2 class="inside">What is Design?</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor. </p><br>
 						<p>Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<span class="pull_quote">"Beauty and brains, pleasure and usability &mdash; they should go hand in hand."<br>-Donald Norman</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						<span class="pull_quote">"Beauty and brains, pleasure and usability &ndash; they should go hand in hand."<br>-Donald Norman</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					</div>
-					<div class="grid_3">
-						<br><a href="#" class="video"><img src="../assets/img/content/whatisdesign_alex.jpg"><br>
-						What is design?</a> Episode 4
+					<div class="grid_3"><br>
+						<h4 class="inside">Related links</h4>
+						<a href="#" class="video"><img src="../assets/img/content/whatisdesign_alex.jpg"><br>
+						What is design?</a> Video charette<br><br>
+						<a href="#" class="video"><img src="../assets/img/content/dartemag.jpg"><br>
+						D'arte Magazine</a> Student project 
 					</div>
 				</div>
 				<div id="push"></div>
