--- a/exhibition/advanced_typography/index.htm
+++ b/exhibition/advanced_typography/index.htm
@@ -80,9 +80,13 @@
 				
 				<div id="exhibition">
 					<div class="container_12">
-						<div id="hero" class="grid_12">
-							<img class="img_border" src="../../assets/img/content/piecesshow.jpg">
-						</div>
+						<figure class="grid_12" id="sidekick" >
+							<img src="../../assets/img/content/adv_type.png">
+							<figcaption class="byline">
+								<p class="left">See Victor Ng and Hanah Ho's solution to Aline Skirts</p>
+								<span class="arrow">&rarr;</span>
+							</figcaption>
+						</figure>
 					</div>
 															
 					<section class="container_12">
