--- a/index.htm
+++ b/index.htm
@@ -148,9 +148,15 @@
 		</div><!-- end content wrapper -->
 		<footer>
 			<div class="container_12">
-				<div class="grid_4"></div>
-				<div class="grid_4"></div>
-				<div class="grid_4"></div>
+				<div class="grid_12">
+					<ul>
+					<li>&copy; Copyright 2011 Carnegie Mellon University</li>
+					<li>Intranet Login</li>
+					<li>Contact</li>
+					<li>Campus Map</li>
+					<li>Press</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
