top level nav hover menus, on front page only

--- a/index.htm
+++ b/index.htm
@@ -32,36 +32,74 @@
 			<div id="wrapper">
 				<header>
 					<div class="container_12">
-						<div class="grid_2 suffix_2">
+						<div class="grid_2">
 							<!-- logo is still slightly too big-->
 							<a href="index.htm">
 								<h1 id="logo">Carnegie Mellon Design</h1>
 							</a>
 						</div>
 												
-						<div class="grid_8">
+						<div class="grid_10">
 							<!-- i can has spritesheet -->
 							<nav id="global">
 								<ul>
 									<a href="school"><li>
 									School
+										<ul class="hover_nav">
+											<li>What is Design?</li>
+											<li>Design at CMU</li>
+											<li>Design Institute</li>
+											<li>Features</li>
+											<li>Calendar</li>
+											<li>Environment</li>
+											<li>Contact</li>
+										</ul>
 									</li></a>
 									<a href="programs"><li>
 									Programs
+										<ul class="hover_nav">
+											<li>Pre-College</li>
+											<li>Undergraduate</li>
+											<li>Graduate</li>
+											<li>PhD</li>
+											<li>Continuing Ed</li>
+										</ul>
 									</li></a>
 									<a href="community"><li>
 									Community
+										<ul class="hover_nav">
+											<li>Undergraduate</li>
+											<li>Graduate</li>
+											<li>PhD</li>
+											<li>Faculty</li>
+											<li>Staff</li>
+											<li>Alumni</li>
+										</ul>
 									</li></a>
 									<a href="exhibition"><li>
 									Exhibition
+										<ul class="hover_nav">
+											<li>Senior</li>
+											<li>Junior </li>
+											<li>Sophomore</li>
+											<li>Freshmen</li>
+											<li>Electives</li>
+										</ul>
 									</li></a>
 									<a href="apply"><li>
 									Apply
+										<ul class="hover_nav">
+											<li>Applying</li>
+											<li>Visiting</li>
+											<li>Financial Aid</li>
+											<li>FAQ</li>
+										</ul>
 									</li></a>
 									<a href="support"><li>
 									Support
 									</li></a>
 								</ul>
+								
 							</nav>
 						</div>
 					</div>
