footer for front page only

--- a/index.htm
+++ b/index.htm
@@ -186,14 +186,22 @@
 		</div><!-- end content wrapper -->
 		<footer>
 			<div class="container_12">
-				<div class="grid_12">
-					<ul>
-					<li>&copy; Copyright 2011 Carnegie Mellon University</li>
-					<li>Intranet Login</li>
-					<li>Contact</li>
-					<li>Campus Map</li>
-					<li>Press</li>
-					</ul>
+				<div class="grid_4">
+					&copy; Copyright 2011 <a href="http://cmu.edu">Carnegie Mellon University</a>
+				</div>
+				<div class="grid_3">
+					5000 Forbes Avenue, MMCH 110<br>
+					Pittsburgh, PA 15213-3815<br>
+					Phone: (412) 268-2828
+				</div>
+				<div class="grid_2">
+					<a href="#">Contact</a><br>
+					<a href="#">Campus Map</a><br>
+					<a href="#">Press</a>
+				</div>
+				<div class="grid_3">
+					Faculty, Staff, & Students<br>
+					<a href="#" class="login">Login to Intranet</a>
 				</div>
 			</div>
 		</footer>
