new footer again, for all pages

--- a/index.htm
+++ b/index.htm
@@ -186,22 +186,30 @@
 		</div><!-- end content wrapper -->
 		<footer>
 			<div class="container_12">
-				<div class="grid_4">
-					&copy; Copyright 2011 <a href="http://cmu.edu">Carnegie Mellon University</a>
-				</div>
 				<div class="grid_3">
+					<strong>Contact us</strong><br>
 					5000 Forbes Avenue, MMCH 110<br>
 					Pittsburgh, PA 15213-3815<br>
-					Phone: (412) 268-2828
+					info@design.cmu.edu<br>
+					(412) 268-2828
+				</div>
+				<div class="grid_5">
+					<a href="http://twitter.com/cmudesign"><strong>Recent tweets</strong></a><br>
+					<span class="tweets">#Thackara grabbed them deeply last night at CMU design, well challenged to find a restorative economy in PGH</span><br>
+					<span class="tweets_timestamp">April 22</span><br><br>
+					<span class="tweets">If you missed Arnold Wasserman's lecture, it will be available soon for online viewing. http://bit.ly/hxcl5R #cmudesignthefuture</span><br>
+					<span class="tweets_timestamp">April 21</span><br><br>
 				</div>
 				<div class="grid_2">
-					<a href="#">Contact</a><br>
-					<a href="#">Campus Map</a><br>
-					<a href="#">Press</a>
+					<strong>Connect</strong><br>
+					<a href="#">Twitter</a><br>
+					<a href="#">Facebook</a><br>
+					<a href="#">Youtube</a><br>
+					<a href="#">LinkedIn</a><br>
 				</div>
-				<div class="grid_3">
-					Faculty, Staff, & Students<br>
-					<a href="#" class="login">Login to Intranet</a>
+				<div class="grid_2">
+					<strong>Intranet</strong><br>
+					<a href="#" class="login">Login</a>		
 				</div>
 			</div>
 		</footer>
