--- a/school/index.htm
+++ b/school/index.htm
@@ -22,23 +22,72 @@
 			<div id="wrapper">
 				<header>
 					<div class="container_12">
-						<div class="grid_2 suffix_2">
+						<div class="grid_2">
 							<!-- logo is still slightly too big-->
 							<a href="../index.htm">
 								<h1 id="logo">Carnegie Mellon Design</h1>
 							</a>
 						</div>
 												
-						<div class="grid_8">
+						<div class="grid_10">
 							<!-- i can has spritesheet -->
 							<nav id="global">
 								<ul>
-									<a href="../school"><li>School</li></a>
-									<a href="../programs"><li>Programs</li></a>
-									<a href="../community"><li>Community</li></a>
-									<a href="../exhibition"><li>Exhibition</li></a>
-									<a href="../apply"><li>Apply</li></a>
-									<a href="../support"><li>Support</li></a>
+									<a href="../school"><li class="selected">
+									School
+										<ul class="hover_nav">
+											<li>What is Design?</li>
+											<li>Design at CMU</li>
+											<li>Design Institute</li>
+											<li>Features</li>
+											<li>Calendar</li>
+											<li>Environment</li>
+											<li>Contact</li>
+										</ul>
+									</li></a>
+									<a href="../programs"><li>
+									Programs
+										<ul class="hover_nav">
+											<li>Pre-College</li>
+											<li>Undergraduate</li>
+											<li>Graduate</li>
+											<li>PhD</li>
+											<li>Continuing Ed</li>
+										</ul>
+									</li></a>
+									<a href="../community"><li>
+									Community
+										<ul class="hover_nav">
+											<li>Undergraduate</li>
+											<li>Graduate</li>
+											<li>PhD</li>
+											<li>Faculty</li>
+											<li>Staff</li>
+											<li>Alumni</li>
+										</ul>
+									</li></a>
+									<a href="../exhibition"><li>
+									Exhibition
+										<ul class="hover_nav">
+											<li>Senior</li>
+											<li>Junior </li>
+											<li>Sophomore</li>
+											<li>Freshmen</li>
+											<li>Electives</li>
+										</ul>
+									</li></a>
+									<a href="../apply"><li>
+									Apply
+										<ul class="hover_nav">
+											<li>Applying</li>
+											<li>Visiting</li>
+											<li>Financial Aid</li>
+											<li>FAQ</li>
+										</ul>
+									</li></a>
+									<a href="../support"><li>
+									Support
+									</li></a>
 								</ul>
 							</nav>
 						</div>
@@ -83,9 +132,31 @@
 		</div><!-- end content wrapper -->
 		<footer>
 			<div class="container_12">
-				<div class="grid_4"></div>
-				<div class="grid_4"></div>
-				<div class="grid_4"></div>
+				<div class="grid_3">
+					<strong>Contact us</strong><br>
+					5000 Forbes Avenue, MMCH 110<br>
+					Pittsburgh, PA 15213-3815<br>
+					info@design.cmu.edu<br>
+					(412) 268-2828
+				</div>
+				<div class="grid_5">
+					<a href="http://twitter.com/cmudesign"><strong>Recent tweets</strong></a><br>
+					<span class="tweets">#Thackara grabbed them deeply last night at CMU design, well challenged to find a restorative economy in PGH</span><br>
+					<span class="tweets_timestamp">April 22</span><br><br>
+					<span class="tweets">If you missed Arnold Wasserman's lecture, it will be available soon for online viewing. http://bit.ly/hxcl5R #cmudesignthefuture</span><br>
+					<span class="tweets_timestamp">April 21</span><br><br>
+				</div>
+				<div class="grid_2">
+					<strong>Connect</strong><br>
+					<a href="#">Twitter</a><br>
+					<a href="#">Facebook</a><br>
+					<a href="#">Youtube</a><br>
+					<a href="#">LinkedIn</a><br>
+				</div>
+				<div class="grid_2">
+					<strong>Intranet</strong><br>
+					<a href="#" class="login">Login</a>		
+				</div>
 			</div>
 		</footer>
 	</body>
