filler pages up

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,8 @@
 			$('#hero .slideshow').cycle({
 				fx: 'scrollHorz',
 				speed: '10',
-				timeout:0,
+				timeout:5000,
+				speed: 500,
 				next:'#hero .slideshow, #pager_next',
 				prev:'#pager_prev',
 				after: function() {
