Started 3rd-level Exhibition. Lots of Exhibition-related changes. A few tweaks to Intranet.

--- a/exhibition/advanced_typography/index.htm
+++ b/exhibition/advanced_typography/index.htm
@@ -90,7 +90,7 @@
 					</div>
 															
 					<section class="container_12">
-						<div class="grid_9">
+						<div class="grid_9" id="hotfix">
 							<h3>
 								<span class="left">Advanced Typography</span>
 								<span class="right year">Fall 2010</span>	
