--- a/intranet/index.htm
+++ b/intranet/index.htm
@@ -16,15 +16,25 @@
 				<div class="container_12">
 					<div class="grid_2 suffix_2">
 						<!-- logo is still slightly too big-->
-						<h1 class="intranet" id="logo">Carnegie Mellon Design</h1>
+						<a href="index.htm">
+							<h1 class="intranet" id="logo">Carnegie Mellon Design</h1>
+						</a>
 					</div>
 					
 					<div class="grid_8">
 						<!-- i can has spritesheet -->
 						<nav id="global">
 							<ul>
-								<a href="#"><li>My Classes</li></a>
-								<a href="#"><li><img src="../assets/img/content/davidyen.jpg" width="24px">David Yen</li></a>
+								<a href="#">
+									<li>My Classes</li>
+								</a>
+								
+								<a href="profile.htm">
+									<li>
+										<img src="../assets/img/content/davidyen.jpg" width="24px">
+										<span>David Yen</span>
+									</li>
+								</a>
 							</ul>
 						</nav>
 					</div>
