--- a/intranet/profile.htm
+++ b/intranet/profile.htm
@@ -16,7 +16,9 @@
 				<div class="container_12">
 					<div class="grid_2 suffix_2">
 						<!-- logo is still slightly too big-->
-						<h1 class="intranet" id="logo">Carnegie Mellon Design</h1>
+						<a href="index.htm">
+							<h1 class="intranet" id="logo">Carnegie Mellon Design</h1>
+						</a>
 					</div>
 					
 					<div class="grid_8">
@@ -41,7 +43,7 @@
 			
 			<div class="container_12">
 				<div id="profile" class="grid_7 suffix_5">
-					<img src="img/content/davidyen.jpg">
+					<img src="../assets/img/content/davidyen.jpg">
 					<div id="username">David Yen</div>
 					
 					<h4>Industrial design undergraduate</h4>
