--- a/community/seniors.htm
+++ b/community/seniors.htm
@@ -19,13 +19,12 @@
 	</head>
 	
 	<body>
-	<body>
 			<div id="wrapper">
 				<header>
 					<div class="container_12">
 						<div class="grid_2">
 							<!-- logo is still slightly too big-->
-							<a href="index.htm">
+							<a href="../index.htm">
 								<h1 id="logo">Carnegie Mellon Design</h1>
 							</a>
 						</div>
