--- a/programs/index.htm
+++ b/programs/index.htm
@@ -24,7 +24,7 @@
 					<div class="container_12">
 						<div class="grid_2">
 							<!-- logo is still slightly too big-->
-							<a href="index.htm">
+							<a href="../index.htm">
 								<h1 id="logo">Carnegie Mellon Design</h1>
 							</a>
 						</div>
