fixed select states

--- a/apply/index.htm
+++ b/apply/index.htm
@@ -93,7 +93,7 @@
 										</ul>
 									</li>
 									
-									<li>
+									<li class="selected">
 										<a href="../apply">
 											<span>Apply</span>
 										</a>
