--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 			$('#hero .slideshow').cycle({
 				fx: 'scrollHorz',
 				speed: '10',
-				timeout:5000,
+				timeout:6000,
 				speed: 500,
 				next:'#hero .slideshow, #pager_next',
 				prev:'#pager_prev',
@@ -49,13 +49,27 @@
 											<span>School</span>
 										</a>
 										<ul class="hover_nav">
-											<li>What is Design?</li>
-											<li>Design at CMU</li>
-											<li>Design Institute</li>
-											<li>Features</li>
-											<li>Calendar</li>
-											<li>Environment</li>
-											<li>Contact</li>
+											<li>
+												<a href="school/whatisdesign.htm">What is Design?</a>
+											</li>
+											<li>
+												<a href="school/designatcmu.htm">Design at CMU</a>
+											</li>
+											<li>
+												<a href="school/designinstitute.htm">Design Institute</a>
+											</li>
+											<li>
+												<a href="school/features.htm">Features</a>
+											</li>
+											<li>
+												<a href="school/calendar.htm">Calendar</a>
+											</li>
+											<li>
+												<a href="school/environment.htm">Environment</a>
+											</li>
+											<li>
+												<a href="school/contact.htm">Contact</a>
+											</li>
 										</ul>
 									</li>
 									
