--- a/school/index.htm
+++ b/school/index.htm
@@ -33,7 +33,7 @@
 							<!-- i can has spritesheet -->
 							<nav id="global">
 								<ul>
-									<li>
+									<li class="selected">
 										<a href="../school">
 											<span>School</span>
 										</a>
