--- a/community/index.htm
+++ b/community/index.htm
@@ -62,7 +62,7 @@
 										</ul>
 									</li>
 									
-									<li>
+									<li class="selected">
 										<a href="../community">
 											<span>Community</span>
 										</a>
