--- a/exhibition/index.htm
+++ b/exhibition/index.htm
@@ -113,7 +113,7 @@
 										</ul>
 									</li>
 									
-									<li>
+									<li class="selected">
 										<a href="../exhibition">
 											<span>Exhibition</span>
 										</a>
