--- a/programs/index.htm
+++ b/programs/index.htm
@@ -49,7 +49,7 @@
 									</li>
 									
 									
-									<li>
+									<li class="selected">
 										<a href="../programs">
 											<span>Programs</span>
 										</a>
