--- a/support/index.htm
+++ b/support/index.htm
@@ -104,7 +104,7 @@
 										</ul>
 									</li>
 									
-									<li>
+									<li class="selected">
 										<a href="../support">
 											<span>Support</span>
 										</a>
