Minor CSS changes on the relativity bar.
Added a .gitignore since DS_Store was annoying me.

--- a/exhibition/pieces/the_coop.htm
+++ b/exhibition/pieces/the_coop.htm
@@ -185,7 +185,7 @@
 									</a>
 									
 									<a href="#">
-										<li class="studio left">
+										<li class="designer left">
 											<figure>
 												<img alt="Photo of Pieces studio" class="small" src="../../assets/img/courses/others/pieces_sq.png">
 												<figcaption>
@@ -206,7 +206,9 @@
 														<p class="project_name">
 															<a href="#">IVY</a>
 														</p>
-														<p class="designer_name">Paris Lowitz</p>
+														<p class="designer_name">
+															<a href="../../community/undergrads/plowitz">Paris Lowitz</a>
+														</p>
 													</figcaption>
 												</figure>
 											
@@ -214,14 +216,16 @@
 													<img alt="Photo of Federico Rios" class="small" src="http://placehold.it/50x50/dfdfdf/dfdfdf">
 													<figcaption>
 														<p class="project_name">
-															<a href="../../community/undergrads/frios">Nautilus Bass</a>
+															<a href="#">Nautilus Bass</a>
 														</p>
-														<p class="designer_name">Jim Toggweiler</p>
+														<p class="designer_name">
+															<a href="#">Jim Toggweiler</a>
+														</p>
 													</figcaption>
 												</figure>
 											</div>
 										</li>
-									</a>
+									</a>									
 								</ul>
 							</div>
 						</div>
