--- a/index.htm
+++ b/index.htm
@@ -152,7 +152,7 @@
 							<h3>Latest News</h3>
 						
 							<div class="alpha grid_9">
-								<article>
+								<article class="first_story">
 									<div class="alpha grid_4">
 										<img src="http://placehold.it/300x200/EFEFEF/EFEFEF">
 									</div>
@@ -199,7 +199,7 @@
 								<article>
 									<img src="http://placehold.it/220x120/EFEFEF/EFEFEF">
 									<h4 class="alpha grid_3">
-										<a href="#">Nassim Jafarinaimi to Defend PhD</a>
+										<a href="#">Nassim Jafarinaimi defends PhD</a>
 									</h4>
 									<p class="alpha grid_3">Next Friday (4/1), Jafarinaimi will defend her thesis titled, "An Inquiry into the Form of Social Interaction in Contemporary Products"</p>
 								</article>
