fixed intranet header bar

--- a/intranet/index.htm
+++ b/intranet/index.htm
@@ -25,16 +25,18 @@
 						<!-- i can has spritesheet -->
 						<nav id="global">
 							<ul>
-								<a href="#">
-									<li>My Classes</li>
-								</a>
+								<li>
+									<a href="classes">
+										<span>Classes</span>
+									</a>
+								</li>
+								<li>
+									<a href="profile">
+										<img src="../assets/img/content/davidyen.jpg" width="16px">
+										<span id="intranet_user">David Yen</span>
+									</a>
+								</li>
 								
-								<a href="profile.htm">
-									<li>
-										<img src="../assets/img/content/davidyen.jpg" width="24px">
-										<span>David Yen</span>
-									</li>
-								</a>
 							</ul>
 						</nav>
 					</div>
