--- a/intranet/profile.htm
+++ b/intranet/profile.htm
@@ -25,16 +25,17 @@
 						<!-- i can has spritesheet -->
 						<nav id="global">
 							<ul>
-								<a href="#">
-									<li>My Classes</li>
-								</a>
-								
-								<a href="#">
-									<li>
-										<img src="../assets/img/content/davidyen.jpg" width="24px">
-										David Yen
-									</li>
-								</a>
+								<li>
+									<a href="classes">
+										<span>Classes</span>
+									</a>
+								</li>
+								<li>
+									<a href="profile">
+										<img src="../assets/img/content/davidyen.jpg" width="16px">
+										<span id="intranet_user">David Yen</span>
+									</a>
+								</li>
 							</ul>
 						</nav>
 					</div>
