--- a/intranet/index.htm
+++ b/intranet/index.htm
@@ -35,6 +35,17 @@
 										<img src="../assets/img/content/davidyen.jpg" width="16px">
 										<span id="intranet_user">David Yen</span>
 									</a>
+									<ul class="hover_nav">
+										<li>
+											<a href="#">Profile</a>
+										</li>
+										<li>
+											<a href="#">Design at CMU</a>
+										</li>
+										<li>
+											<a href="#">Design Institute</a>
+										</li>
+									</ul>
 								</li>
 								
 							</ul>
