Minor additions to homepage.
• Added failsafe news nav bar at bottom
• on hover read article links

--- a/index.htm
+++ b/index.htm
@@ -283,6 +283,14 @@
 								</article>			
 							</div>
 						</div>
+						<nav class="grid_12">
+							<span id="older">
+								<a href="#">
+									<span>View older news</span>
+								  <span>&rarr;</span>
+								 </a>
+							</span>
+						</nav>
 					</div><!-- end news -->
 				</div>
 				<div id="push"></div>
