--- a/index.htm
+++ b/index.htm
@@ -283,6 +283,14 @@
 								</article>			
 							</div>
 						</div>
+						<nav class="grid_12">
+							<a href="#">
+								<span id="older">
+									<span>View older news</span>
+								  <span>&rarr;</span>
+								</span>
+							</a>
+						</nav>
 					</div><!-- end news -->
 				</div>
 				<div id="push"></div>
