What is Design page.

--- a/index.htm
+++ b/index.htm
@@ -293,7 +293,7 @@
 								</article>			
 							</div>
 						</div>
-						<nav class="grid_12">
+						<nav class="grid_12" id="bottom">
 							<a href="#">
 								<span id="older">
 									<span>View older news</span>
