--- a/school/index.htm
+++ b/school/index.htm
@@ -145,8 +145,11 @@
 					<section class="relativity_wrapper">
 						<ul class="relativity">
 							<li>
-								<figure>
-									<a class="video" href="#"><img src="../assets/img/related/school-01.jpg"></a>
+								<figure class="video_wrapper">
+									<a href="#">
+										<div class="video"></div>
+										<img src="../assets/img/related/school-01.jpg">
+									</a>
 									<figcaption>
 										<h5>
 											<a href="#">What is Design?</a>
