visual bug fixes to programs/index

--- a/programs/index.htm
+++ b/programs/index.htm
@@ -138,8 +138,8 @@
 						<p>The School of Design offers a full range of education, from high school precollege all the way to continuing education as a working professional. We believe that design is an integral part of modern life, and the sooner people are exposed to it, the sooner it can help them solve the problems they face every day.</p>
 					</div>
 					
-					<div class="grid_12" id="programs">
-						<div class="alpha grid_3">
+					<div id="programs">
+						<div class="grid_3">
 							<a href="#">
 								<div class="overlay"></div>
 								<img src="../assets/img/content/prog-precollege.png">
