--- a/intranet/index.htm
+++ b/intranet/index.htm
@@ -40,10 +40,10 @@
 											<a href="#">Profile</a>
 										</li>
 										<li>
-											<a href="#">Design at CMU</a>
+											<a href="#">My Account</a>
 										</li>
 										<li>
-											<a href="#">Design Institute</a>
+											<a href="#">Logout</a>
 										</li>
 									</ul>
 								</li>
