--- a/exhibition/pieces/the_coop.htm
+++ b/exhibition/pieces/the_coop.htm
@@ -123,8 +123,8 @@
 				
 				<div id="exhibition">
 					<div class="container_12">
-						<figure class="grid_12" id="sidekick">
-							<img src="../../assets/img/content/cooptoys_sidekick.png">
+						<figure class="grid_12" id="hero">
+							<img src="../../assets/img/content/cooptoys4.png">
 							<!-- 
 							<figcaption class="byline">
 								<p class="left">
