--- a/intranet/index.htm
+++ b/intranet/index.htm
@@ -26,14 +26,15 @@
 						<nav id="global">
 							<ul>
 								<li>
-									<a href="classes">
+									<a href="classes.htm">
 										<span>Classes</span>
 									</a>
 								</li>
 								<li>
-									<a href="profile">
-										<img src="../assets/img/content/davidyen.jpg" width="16px">
-										<span id="intranet_user">David Yen</span>
+									<a href="profile.htm">
+										<img src="../assets/img/content/davidyen.jpg" width="24px">
+										<span class="username">David Yen</span>
+										<span class="usertype">Student</span>
 									</a>
 									<ul class="hover_nav">
 										<li>
