--- a/intranet/classes.htm
+++ b/intranet/classes.htm
@@ -159,7 +159,9 @@
 							</a>
 						</ul><br class="clear">
 					</div> <!-- end class row -->
-					
+					<div class="class_row">
+					<a href="#" class="button">Add a class</a>
+					</div>
 				</section>
 				
 			</div>
