--- a/intranet/index.htm
+++ b/intranet/index.htm
@@ -27,7 +27,12 @@
 							<ul>
 								<li>
 									<a href="classes.htm">
-										<span>Classes</span>
+										<span>My Classes</span>
+									</a>
+								</li>
+								<li>
+									<a href="prints.htm">
+										<span>My Prints</span>
 									</a>
 								</li>
 								<li>
