--- a/intranet/classes.htm
+++ b/intranet/classes.htm
@@ -63,7 +63,7 @@
 							<h5 class="intranet">Product Design III</h5>
 							Eric Anderson, Josh Welsh<br>
 							<a href="#" class="quiet">View online</a><br>
-							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design... <a href="#">more</a></span>
+							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design...</span>
 						</div>
 						<ul>
 							<a href="#">
@@ -75,13 +75,13 @@
 							<a href="#">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									Radio Design for the Blind
+									Inclusive design
 								</li>
 							</a>
 							<a href="#">
 								<li class="grid_3 omega">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									Pittsburgh Public Spaces
+									Pittsburgh public spaces
 								</li>
 							</a>
 						</ul><br class="clear">
@@ -92,25 +92,25 @@
 							<h5 class="intranet">Experimental Form</h5>
 							Mark Baskinger<br>
 							<a href="#" class="quiet">View online</a><br>
-							<span class="quiet">This course looks at the way objects elicit emotional responses and play key roles in enhancing our daily lives. The 5 individual themed projects for the semester, found, formed, fabricated, fiber, and functional... <a href="#">more</a></span>
+							<span class="quiet">This course looks at the way objects elicit emotional responses and play key roles in enhancing our daily lives. The 5 individual themed projects for the semester, found, formed, fabricated, fiber, and functional...</span>
 						</div>
 						<ul>
 							<a href="#">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									Perpetual Motion
+									Perpetual motion
 								</li>
 							</a>
 							<a href="#">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									Kinetic Visualizers
+									Kinetic visualizers
 								</li>
 							</a>
 							<a href="#">
 								<li class="grid_3 omega">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									3D Printed Chess
+									3D printed chess pieces
 								</li>
 							</a><br class="clear"><br>
 								<li class="grid_3 omega">
@@ -119,13 +119,13 @@
 							<a href="#">
 								<li class="grid_3 ">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									Information Graphic: 2D
+									Information graphic: 2D
 								</li>
 							</a>
 							<a href="#">
 								<li class="grid_3 omega">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									Information Graphic: 3D
+									Information graphic: 3D
 								</li>
 							</a>
 						</ul><br class="clear">
@@ -136,25 +136,25 @@
 							<h5 class="intranet">Digitech Design Tools</h5>
 							Wayne Chung<br>
 							<a href="#" class="quiet">View online</a><br>
-							<span class="quiet">This course is the application and experimentation of digital technology inputs and outputs. The purpose will be to design, build, and experiment with forms that are unique... <a href="#">more</a></span>
+							<span class="quiet">This course is the application and experimentation of digital technology inputs and outputs. The purpose will be to design, build, and experiment with forms that are unique...</span>
 						</div>
 						<ul>
 							<a href="#">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									Perpetual Motion
+									Desk organizer
 								</li>
 							</a>
 							<a href="#">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									Kinetic Visualizers
+									Beautiful form
 								</li>
 							</a>
 							<a href="#">
 								<li class="grid_3 omega">
 									<img src="http://placehold.it/220x140/e3e3e3">
-									3D Printed Chess
+									Hand held product
 								</li>
 							</a>
 						</ul><br class="clear">
