--- a/community/index.htm
+++ b/community/index.htm
@@ -5,6 +5,7 @@
 		<link href="../assets/css/reset.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/960.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/style.css" rel="stylesheet" type="text/css">
+		<link href="../assets/css/community.css" rel="stylesheet" type="text/css">
 		
 		<script type="text/javascript" src="../assets/js/jquery-1.5.min.js"></script> 
 		<script type="text/javascript" src="../assets/js/jquery.cycle.all.min.js"></script>
