--- a/intranet/index.htm
+++ b/intranet/index.htm
@@ -28,12 +28,12 @@
 							<ul>
 								<li>
 									<a href="classes.htm">
-										<span>My Classes</span>
+										<span>My classes</span>
 									</a>
 								</li>
 								<li>
 									<a href="prints.htm">
-										<span>My Prints</span>
+										<span>My prints</span>
 									</a>
 								</li>
 								<li>
