--- a/intranet/classes.htm
+++ b/intranet/classes.htm
@@ -28,7 +28,12 @@
 							<ul>
 								<li>
 									<a href="classes.htm">
-										<span>Classes</span>
+										<span>My classes</span>
+									</a>
+								</li>
+								<li>
+									<a href="prints.htm">
+										<span>My prints</span>
 									</a>
 								</li>
 								<li>
