early project stuffs

--- a/intranet/classes.htm
+++ b/intranet/classes.htm
@@ -72,21 +72,21 @@
 							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design...</span>
 						</div>
 						<ul>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Redesign charette
 								</li>
 							</a>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Inclusive design
 								</li>
 							</a>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3 omega">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Pittsburgh public spaces
 								</li>
 							</a>
@@ -101,36 +101,36 @@
 							<span class="quiet">This course looks at the way objects elicit emotional responses and play key roles in enhancing our daily lives. The 5 individual themed projects for the semester, found, formed, fabricated, fiber, and functional...</span>
 						</div>
 						<ul>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Perpetual motion
 								</li>
 							</a>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Kinetic visualizers
 								</li>
 							</a>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3 omega">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									3D printed chess pieces
 								</li>
 							</a><br class="clear"><br>
 								<li class="grid_3 omega">
 									&nbsp;
 								</li>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3 ">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Information graphic: 2D
 								</li>
 							</a>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3 omega">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Information graphic: 3D
 								</li>
 							</a>
@@ -145,21 +145,21 @@
 							<span class="quiet">This course is the application and experimentation of digital technology inputs and outputs. The purpose will be to design, build, and experiment with forms that are unique...</span>
 						</div>
 						<ul>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Desk organizer
 								</li>
 							</a>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Beautiful form
 								</li>
 							</a>
-							<a href="#">
+							<a href="project.htm">
 								<li class="grid_3 omega">
-									<img src="http://placehold.it/220x140/e3e3e3">
+									<img src="http://placehold.it/220x140/efefef/efefef">
 									Hand held product
 								</li>
 							</a>
