--- a/intranet/project.htm
+++ b/intranet/project.htm
@@ -67,16 +67,17 @@
 						<form>
 						<input type="text" value="Nobi Radio"></input>
 						<img src="../assets/img/wysiwig.jpg">
-						<textarea>In a sponsored project with Carnegie Mellon Design, General Motors asked us to research and design future interaction scenarios with semi-autonomous vehicles. I worked with Renee Yang to do a brief research phase, develop preliminary ideas, and refine a final concept.
+						<div id="textarea">
+						In a sponsored project with Carnegie Mellon Design, General Motors asked us to research and design future interaction scenarios with semi-autonomous vehicles. I worked with Renee Yang to do a brief research phase, develop preliminary ideas, and refine a final concept.<br><br>
 
-Cars that drive themselves
+<h4>Changing the interaction paradigm</h4>
 
-General Motors worked with CMU's junior industrial design class over the course of a few months on research and interaction design concepts. They were interested in the unique interaction scenarios that could result from the commercial availability of semi-autonomous vehicles.
-
-Research phase
+General Motors worked with CMU's junior industrial design class over the course of a few months on research and interaction design concepts. They were interested in the unique interaction scenarios that could result from the commercial availability of semi-autonomous vehicles.<br><br>
+<img src="../assets/img/content/nobiradio2.jpg"> &nbsp;<img src="../assets/img/content/nobiradio3.jpg"> &nbsp;<img src="../assets/img/content/nobiradio4.jpg"> &nbsp;<img src="../assets/img/content/nobiradio5.jpg"> &nbsp;<img src="../assets/img/content/nobiradio6.jpg"><br><br>
+<h4>Good design is inclusive design</h4>
 
 We spent some time researching and creating models of the existing driving model, to both inform our concepts and give us a vocabulary for discussing them. We used a school survey, contextual inquiries, and make tools to diagram relevant parts of the experience of driving, which we used to direct our ideation phase. From our research we were able to draw conclusions about attention demands, social interactions inside of and between other cars, rituals and habitual behavior, and dangerous situations. We also took steps to familiarized ourselves with the state of autonomy, artificial intelligience, and display technology.
-						</textarea>
+						</div>
 						<a href="#" class="button">Save changes</a>
 						</form>
 						<br class="clear">
@@ -85,6 +86,7 @@ We spent some time researching and creating models of the existing driving model
 						<div>
 							<h5 class="intranet">"Inclusive design" project</h5>
 							<img src="../assets/img/content/nobiradio.jpg">
+							<a href="#" class="intranet">Change thumbnail</a>
 							<hr>
 							<h5 class="intranet">Product Design III</h5>
 							Eric Anderson, Josh Welsh<br>
