--- a/intranet/project.htm
+++ b/intranet/project.htm
@@ -73,7 +73,7 @@
 <h4>Changing the interaction paradigm</h4>
 
 General Motors worked with CMU's junior industrial design class over the course of a few months on research and interaction design concepts. They were interested in the unique interaction scenarios that could result from the commercial availability of semi-autonomous vehicles.<br><br>
-<img src="../assets/img/content/nobiradio2.jpg"> &nbsp;<img src="../assets/img/content/nobiradio3.jpg"> &nbsp;<img src="../assets/img/content/nobiradio4.jpg"> &nbsp;<img src="../assets/img/content/nobiradio5.jpg"> &nbsp;<img src="../assets/img/content/nobiradio6.jpg"><br><br>
+<img src="../assets/img/content/nobiradio2.jpg"> <img src="../assets/img/content/nobiradio3.jpg"> <img src="../assets/img/content/nobiradio4.jpg"> <img src="../assets/img/content/nobiradio5.jpg"> <img src="../assets/img/content/nobiradio6.jpg"><br><br>
 <h4>Good design is inclusive design</h4>
 
 We spent some time researching and creating models of the existing driving model, to both inform our concepts and give us a vocabulary for discussing them. We used a school survey, contextual inquiries, and make tools to diagram relevant parts of the experience of driving, which we used to direct our ideation phase. From our research we were able to draw conclusions about attention demands, social interactions inside of and between other cars, rituals and habitual behavior, and dangerous situations. We also took steps to familiarized ourselves with the state of autonomy, artificial intelligience, and display technology.
