--- a/intranet/project.htm
+++ b/intranet/project.htm
@@ -63,6 +63,13 @@
 			
 			<div class="container_12">
 				<section id="project" class="grid_12">
+					<div class="grid_12 alpha breadcrumb">
+						<a href="classes.htm" class="intranet">Classes</a> / Product Design III / Inclusive Design project<hr>
+						<!--
+Editing "Inclusive design" project for Product Design III class.<br>
+						<a href="classes.htm" class="intranet">Back to my classes</a><br class="clear"><br>
+-->
+					</div>
 					<div class="grid_7 alpha suffix_1">
 						<form>
 						<input type="text" value="Nobi Radio"></input>
